tests/sksl/errors/LayoutInFunctions.dsl.glsl
### Compilation failed:

error: 'key' is not a valid layout qualifier
error: 'max_vertices' is not a valid layout qualifier
error: expected ',', but found '='
error: expected a type, but found '1'
4 errors
